# fitness-club

./: .gitignore  README.md
SQL/: DDL.sql  DML.sql
app/backend/: .gitignore  README.md  app.py  db.py  main.py  pyproject.toml  seed.py
app/backend/backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
app/frontend/: index.html  package-lock.json  package.json
app/frontend/src/: App.js  App.jsx  AuthContext.jsx  main.jsx  styles.css
app/frontend/src/pages/: AdminPage.js  AdminPage.jsx  MemberPage.js  MemberPage.jsx  TrainerPage.js  TrainerPage.jsx
backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
models/: __init__.py  class_registration.py  equipment.py  fitness_goal.py  group_class.py  health_metric.py  invoice.py  invoice_item.py  maintenance_log.py  member.py  payment.py  personal_training_session.py  room.py  trainer.py  trainer_availability.py
